--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ block content
         th Title 
         th Author
         th Genre 
-        th Year
+        th Years
 
     tbody
       each book in books
