change pug files

--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ block content
         th Title 
         th Author
         th Genre 
-        th Years
+        th Year
 
     tbody
       each book in books
