--- a/views/update-book.pug
+++ b/views/update-book.pug
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+    include errors
+    
     h1= title
     form(method='POST', action=`/books/${book.id}`)
         p 
